<resources>
    <string name="app_name">Android Recruit Challenge</string>
    <string name="action_settings">Settings</string>
    <string name="repositoryName">Nombre Repositorio</string>
    <string name="repositoryDesc">Descripcion del repositorio lorem ipsum dolor sit amet lorem ipsum dolor amet lorem ipsum dolor amet lorem ipsum dolor amet lorem ipsum dolor</string>
    <string name="repositoryUserName">Nombre usuario</string>
    <string name="repositoryCreateDate">28-01-2020</string>
    <string name="repositoryWatchersCount">640</string>
    <string name="repositoryStargazersCount">98</string>
    <string name="pullRequestTitle">Titulo pull request</string>
    <string name="pullRequestDesc">Descripcion del pull request lorem ipsum dolor sit amet lorem ipsum dolor amet lorem ipsum dolor amet lorem ipsum dolor amet lorem ipsum dolor</string>
    <string name="pullRequestStatus">open</string>
    <string name="homeTittle">Github JavaPop</string>
    <string name="pullRequestListEmptyDesc">No existen pull request que mostrar</string>
</resources>
